# internal/models/jsonRep/task.go
@@ -1,6 +1,16 @@
 package jsonrep
 
-type TaskAdd struct {
-	Code         string
-	CompilerName string
+import "github.com/google/uuid"
+
+type TaskRequest struct {
+	Translator string `json:"translator" binding:"required"`
+	Code       string `json:"code" binding:"required"`
+}
+
+type TaskJSON struct {
+	ID           uuid.UUID `json:"id"`
+	Status       string    `json:"status"`
+	Code         string    `json:"code"`
+	CompilerName string    `json:"compiler_name"`
+	Result       string    `json:"result"`
 }
